White space issue solved

--- a/home.css
+++ b/home.css
@@ -356,15 +356,6 @@ nav {
   }
 }
 
-/* @media screen and (max-width: 1125px) {
-  .name-of-restaurant,
-  .steak-desc,
-  .fish-desc {
-    background-size: contain;
-    background-attachment: scroll;
-  }
-} */
-
 /* Override for iPhones */
 @media screen and (max-width: 1125px) {
   .name-of-restaurant,
